# COMPSCI648-Project

./: .gitignore  README.md  constants.py  error_kraus.py  metrics.py  plot_existing_history.py  pyproject.toml  qml_training.py  qml_training_parallel.py  qml_v1.ipynb  quantum_simulator.py  requirements.txt  run_experiments.py  test_qml_run.py  test_qnn_layers.py  test_quantum_simulator.py  visualizer.py
.github/workflows/: ci.yml
demos/: circuit_visualization.ipynb
tests/: __init__.py  test_parallelization.py  test_qml_parallel_run.py  test_qml_run.py  test_qnn_layers.py  test_quantum_simulator.py  test_run_experiments.py  test_state_encoding.py
