[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compsci648-qml"
version = "0.1.0"
description = "Quantum Machine Learning Project for COMPSCI648"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0,<2.3.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib",
    "scikit-learn",
]

[tool.setuptools]
py-modules = [
    "quantum_simulator",
    "qml_training",
    "qml_training_parallel",
    "run_experiments",
    "metrics",
    "error_kraus",
    "visualizer",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
